# CMH_Client

./: .gitignore  CMakeLists.txt  Readme.md  application.properties  main.cpp
PropertyReader/: PropertyReader.cpp  PropertyReader.h
Socket/: ISocket.h  TcpSocket.cpp  TcpSocket.h
SocketBuilder/: ISocketBuilder.h  TcpSocketBuilder.cpp  TcpSocketBuilder.h
Window/: GameWindow.cpp  GameWindow.h  IWindow.h
WindowBuilder/: GameWindowBuilder.cpp  GameWindowBuilder.h  IWindowBuilder.h
